--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cra-template": "1.1.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
