--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,10 @@
     "cra-template": "1.1.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-date-picker": "^8.2.0",
     "react-datepicker": "^4.1.1",
+    "react-datetime-picker": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
