--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.3",
-    "react-toastify": "^7.0.4"
+    "react-toastify": "^7.0.4",
+    "rxjs": "^7.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
